# webexampleopenidc002

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  compose.yaml  push_docker.sh
src/: entities.rs  main.rs  utils.rs
static/: error.html  index.html  profile.html
static/css/: styles.css
